# LLM_LTL

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  run_comparison.py  run_fair_comparison.py  uv.toml
docs/: vlm_reward_integration.md
experiments/: eval_stack_full.py  eval_vlm_door_plot.py  eval_vlm_door_video.py  eval_vlm_stack_video.py  run_rm_maple.py  run_rm_maple_4090.sh  run_vlm_maple.py  test_vlm_door.py  test_vlm_lift.py
gym/: __init__.py  core.py
gym/envs/: __init__.py
gym/envs/mujoco/: __init__.py
gym/spaces/: __init__.py
llm_ltl/: __init__.py
llm_ltl/envs/: __init__.py  rm_wrapper.py
llm_ltl/reward_machines/: __init__.py  reward_machine.py  rm_factory.py
llm_ltl/reward_machines/propositions/: __init__.py  base_props.py  cleanup_props.py  door_props.py  lift_props.py  nut_props.py  peg_props.py  pnp_props.py  stack_props.py  wipe_props.py
llm_ltl/vlm/: __init__.py  test_vlm_reward.py  vlm_client.py  vlm_maple_launcher.py  vlm_reward_wrapper.py
maple/maple/core/: eval_util.py  logging.py
maple/maple/data_management/: vlm_prioritized_replay_buffer.py
maple/maple/envs/: vectorized_env.py
maple/maple/launchers/: conf.py  robosuite_launcher.py
maple/maple/samplers/: rollout_functions.py
maple/scripts/: eval.py  train.py  train_high_gpu.py  train_parallel.py  train_parallel.sh  train_vectorized.py
mujoco_py/: __init__.py
robosuite/: __init__.py  setup.py
tests/: gpu_benchmark.py  run_all_tests.py  test_gpu_training.py  test_maple_compat.py  test_mini_training.py  test_mujoco_sim.py  test_reward_machines.py
(+22 files in other folders)
